--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,6 @@
 # with the python modules ``pickle``, ``dbm.*``,
 # ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
 # (among others).
+
+*.js linguist-language=Python
+static/* linguist-vendored
